# AShaPlayer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/learnffmpegplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/player/: FFMediaPlayer.cpp  FFMediaPlayer.h
app/src/main/cpp/player/decoder/: AudioDecoder.cpp  AudioDecoder.h  DecoderBase.cpp  DecoderBase.h  VideoDecoder.cpp  VideoDecoder.h
app/src/main/cpp/player/render/video/: VRGLRender.h
app/src/main/java/com/example/learnffmpegplayer/: FFMediaPlayer.java  MainActivity.java
app/src/main/java/com/example/learnffmpegplayer/Bean/: VideoBean.java
app/src/main/java/com/example/learnffmpegplayer/constants/: ConstantsData.java
app/src/main/java/com/example/learnffmpegplayer/util/: CommonUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/learnffmpegplayer/: ExampleUnitTest.java
ffmpeg/: build.gradle
ffmpeg/src/main/cpp/: CMakeLists.txt  ffmpeg.cpp
ffmpeg/src/main/java/com/example/ffmpeg/: NativeLib.java
gradle/wrapper/: gradle-wrapper.properties
